Fixing the overflow in mobile/tablet views

--- a/Diploma_projects/DP_hard/css/main-style.css
+++ b/Diploma_projects/DP_hard/css/main-style.css
@@ -60,6 +60,7 @@ a {
     max-width: 1270px;
     padding: 0 50px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
     /* Button settings */
